- Hide labels on focused planet - modified focal lenght to correct visual bug when travelling on mobile

--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ body::-webkit-scrollbar {
   font-family:'Roboto';
   font-weight: '100';
 }
+.hidden{
+  display:none;
+}
 /*------- UI --------*/
 
 #distance-counter{
